fixed alert message behind navbar bug

--- a/app/assets/stylesheets/components/_alert.scss
+++ b/app/assets/stylesheets/components/_alert.scss
@@ -6,6 +6,9 @@
   margin: 0;
   text-align: center;
   color: white;
+  position: relative;
+  top: 70px;
+  left: 0;
 }
 .alert-info {
   background: $green;
