--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -9,6 +9,8 @@
   align-items: center;
   justify-content: space-between;
   position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
   z-index: 100;
 }
